--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "clothing-store-tu-estilo-r",
-  "version": "0.1.0",
+  "name": "ropita-feliz-react",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
